[tool.poetry]
name = "hierarchical_data_you"
version = "0.1.0"
description = "Hierarchical Assignment"
authors = ["Ruben Espino <56930001+r-o-e-574@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
django-mptt = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
